<resources>
    <string name="app_name">GitHubUserApp</string>
    <string name="name_user">Nama User</string>
    <string name="username_user">Username User</string>
    <string name="user_following">User Following</string>
    <string name="user_follower">User Follower</string>
    <string name="user_repository">User Repository</string>
    <string name="user_location">User Location</string>
    <string name="user_company">User Company</string>
    <string name="photo_profile">Foto Profil</string>
    <string name="menu_setting">Setting</string>

    <string-array name="data_username">
        <item>Hencya</item>
        <item>avtara</item>
        <item>yusrilramadhan23</item>
        <item>ShinyQ</item>
        <item>adiwahyudi</item>
        <item>mugeki</item>
        <item>adityahimaone</item>
        <item>whauzan</item>
        <item>ovisannn</item>
        <item>raihanromzi</item>
    </string-array>
    <string-array name="data_name">
        <item>Faiz Rofi Hencya</item>
        <item>Muhammad Avtara Khrisna</item>
        <item>Yusril Ramadhan</item>
        <item>Kurniadi Ahmad Wijaya</item>
        <item>I Wayan Adi Wahyudi</item>
        <item>Muhamad Elang Ramadhan</item>
        <item>Aditya Himawan</item>
        <item>Wahyu Hauzan Rafi</item>
        <item>Ovi sanjaya</item>
        <item>Raihan Romzi</item>
    </string-array>
    <string-array name="data_avatar">
        <item>https://avatars.githubusercontent.com/u/61088218?v=4</item>
        <item>https://avatars.githubusercontent.com/u/26185394?v=4</item>
        <item>https://avatars.githubusercontent.com/u/67570255?v=4</item>
        <item>https://avatars.githubusercontent.com/u/23012961?v=4</item>
        <item>https://avatars.githubusercontent.com/u/24860132?v=4</item>
        <item>https://avatars.githubusercontent.com/u/58929520?v=4</item>
        <item>https://avatars.githubusercontent.com/u/30428194?v=4</item>
        <item>https://avatars.githubusercontent.com/u/57913209?v=4</item>
        <item>https://avatars.githubusercontent.com/u/57137490?v=4</item>
        <item>https://avatars.githubusercontent.com/u/62234509?v=4</item>
    </string-array>
    <string-array name="data_follower">
        <item>38</item>
        <item>24</item>
        <item>4</item>
        <item>101</item>
        <item>26</item>
        <item>16</item>
        <item>10</item>
        <item>15</item>
        <item>16</item>
        <item>18</item>
    </string-array>
    <string-array name="data_following">
        <item>69</item>
        <item>31</item>
        <item>6</item>
        <item>115</item>
        <item>29</item>
        <item>22</item>
        <item>10</item>
        <item>8</item>
        <item>8</item>
        <item>23</item>
    </string-array>
    <string-array name="data_company">
        <item>Telkom University</item>
        <item>Telkom University</item>
        <item>Telkom University</item>
        <item>Telkom University</item>
        <item>Telkom University</item>
        <item>Telkom University</item>
        <item>Genesistech.ga</item>
        <item>ailabtelkom</item>
        <item>University of Jember</item>
        <item>Telkom University</item>
    </string-array>
    <string-array name="data_location">
        <item>Indonesia</item>
        <item>Bandung</item>
        <item>Bengkulu</item>
        <item>Bandung</item>
        <item>Bandung</item>
        <item>Bandung, Indonesia</item>
        <item>Yogyakarta</item>
        <item>Pemalang, Indonesia</item>
        <item>Jember, Indonesia</item>
        <item>Bandung, Indonesia</item>
    </string-array>
    <string-array name="data_repository">
        <item>57</item>
        <item>69</item>
        <item>13</item>
        <item>142</item>
        <item>34</item>
        <item>27</item>
        <item>38</item>
        <item>28</item>
        <item>22</item>
        <item>22</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="This_setting_activity">Setting Menu</string>
    <string name="search">Search Username</string>
    <string name="search_hint">Masukkan Username</string>
    <string name="tab_follower">Follower</string>
    <string name="tab_following">Following</string>
</resources>