<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserActivity">

    <ImageView
        android:id="@+id/img_user_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/photo_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/name_user"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_user_avatar"
        app:layout_constraintStart_toStartOf="@+id/img_user_avatar"
        app:layout_constraintTop_toBottomOf="@+id/img_user_avatar" />

    <TextView
        android:id="@+id/tv_user_username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/username_user"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

    <TextView
        android:id="@+id/tv_user_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/user_following"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_user_username"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_username" />

    <TextView
        android:id="@+id/tv_user_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/user_follower"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_username"
        app:layout_constraintStart_toStartOf="@+id/tv_user_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_username" />

    <TextView
        android:id="@+id/tv_user_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/user_repository"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toEndOf="@+id/tv_user_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_username" />

    <TextView
        android:id="@+id/tv_user_location"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/user_location"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_user_follower"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toEndOf="@+id/tv_user_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_follower" />

    <TextView
        android:id="@+id/tv_user_company"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/user_company"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_user_repository"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/tv_user_follower"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_follower" />

</androidx.constraintlayout.widget.ConstraintLayout>